--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.4",
+    "nodemailer": "^4.1.0",
     "pug": "^2.0.0-rc.3"
   }
 }
